# cs5350-group-assignment-3

./: CMakeLists.txt  aggregate.py  build.sh  experiment-01.slurm  experiment-02.slurm  experiment-03.slurm  experiment-04.slurm  experiment-05.slurm  experiment-06.slurm  hpc-setup.sh  main.cpp  main_old.cpp  matrix.cpp  matrix.hpp  run.sh
results_new/: experiment-01.csv  experiment-02.csv  experiment-03.csv  experiment-04.csv  experiment-05.csv  experiment-06.csv
